force-app/main/default/objects/Blackhawk_API_Settings__c/Blackhawk_API_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Blackhawk API Settings</label>
</CustomObject>