force-app/main/default/objects/Blackhawk_API_Settings__c/fields/Catalog_API_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Catalog_API_Endpoint__c</fullName>
    <label>Catalog API Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>