force-app/main/default/objects/Blackhawk_API_Settings__c/fields/Client_Certificate_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Certificate_Name__c</fullName>
    <label>Client Certificate Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>