force-app/main/default/objects/Blackhawk_API_Settings__c/fields/Client_Program_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Program_Id__c</fullName>
    <label>Client Program Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>