force-app/main/default/objects/Blackhawk_API_Settings__c/fields/eGift_Bulk_Code_Retrieval_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>eGift_Bulk_Code_Retrieval_Endpoint__c</fullName>
    <label>eGift Bulk Code Retrieval Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>