force-app/main/default/objects/Blackhawk_API_Settings__c/fields/Maximum_Retry_Count__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Retry_Count__c</fullName>
    <label>Maximum Retry Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>