force-app/main/default/objects/Blackhawk_API_Settings__c/fields/Milliseconds_To_Wait__c.field-meta.xml
<CustomField>
    <fullName>Milliseconds_To_Wait__c</fullName>
    <label>Milliseconds To Wait</label>
    <length>10</length>
    <type>Text</type>
</CustomField>