force-app/main/default/objects/Blackhawk_API_Settings__c/fields/Monitoring_Status_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Monitoring_Status_Endpoint__c</fullName>
    <label>Monitoring Status Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>