force-app/main/default/objects/Blackhawk_API_Settings__c/fields/Real_time_eGift_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Real_time_eGift_Endpoint__c</fullName>
    <label>Real-time eGift Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>