force-app/main/default/objects/Blackhawk_API_Settings__c/fields/Return_Card_Number_and_PIN__c.field-meta.xml
<CustomField>
    <fullName>Return_Card_Number_and_PIN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Return Card Number and PIN</label>
    <type>Checkbox</type>
</CustomField>