force-app/main/default/objects/Blackhawk_API_Settings__c/fields/SYNCHRONOUS_ONLY__c.field-meta.xml
<CustomField>
    <fullName>SYNCHRONOUS_ONLY__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SYNCHRONOUS ONLY</label>
    <type>Checkbox</type>
</CustomField>